# refast_vtk_js

./: .gitignore  AGENTS.md  LICENSE  README.md  hatch_build.py  pyproject.toml
.github/workflows/: python-publish.yml  python-pytest.yml
examples/: annotations_demo.py  axes_actor.py  basic_triangle.py  click_events.py  cone.py  geometry_representation_options.py  point_cloud.py  shared_dataset_url.py  sync_views.py  threshold_points.py  unstructured_grid_contour.py  volume_rendering.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: Vtk.tsx  VtkComponents.tsx  index.tsx  utils.ts  vtk-shims.d.ts
src/refast_vtk_js/: __init__.py  components.py
tests/: test_components.py
